--- a/resources/blueprints/collections/social_media_channels/social_media_channel.yaml
+++ b/resources/blueprints/collections/social_media_channels/social_media_channel.yaml
@@ -11,6 +11,20 @@ sections:
           validate:
             - required
       -
+        handle: link
+        field:
+          input_type: text
+          antlers: false
+          display: Link
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          visibility: visible
+          always_save: false
+          validate:
+            - required
+      -
         handle: url
         field:
           display: URL
